1.1.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.customizable_viz.VizTransect.rst.txt
polaris.tasks.ocean.customizable\_viz.VizTransect
=================================================

.. currentmodule:: polaris.tasks.ocean.customizable_viz

.. autoclass:: VizTransect

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~VizTransect.__init__
      ~VizTransect.add_dependency
      ~VizTransect.add_horiz_mesh_input_file
      ~VizTransect.add_init_input_file
      ~VizTransect.add_input_file
      ~VizTransect.add_output_file
      ~VizTransect.add_output_files_for_ocean_model_input
      ~VizTransect.add_produced_file
      ~VizTransect.add_property_check
      ~VizTransect.add_vert_coord_input_file
      ~VizTransect.check_properties
      ~VizTransect.constrain_resources
      ~VizTransect.get_horiz_mesh_filename
      ~VizTransect.get_init_filename
      ~VizTransect.get_vert_coord_filename
      ~VizTransect.map_from_native_model_vars
      ~VizTransect.map_to_native_model_vars
      ~VizTransect.open_model_dataset
      ~VizTransect.open_vert_coord_dataset
      ~VizTransect.process_inputs_and_outputs
      ~VizTransect.run
      ~VizTransect.runtime_setup
      ~VizTransect.set_resources
      ~VizTransect.set_shared_config
      ~VizTransect.setup
      ~VizTransect.validate_baselines
      ~VizTransect.work_path
      ~VizTransect.write_horiz_mesh_dataset
      ~VizTransect.write_initial_state_dataset
      ~VizTransect.write_model_dataset
      ~VizTransect.write_vert_coord_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~VizTransect.cores
      ~VizTransect.gpus
      ~VizTransect.may_span_nodes
      ~VizTransect.min_cores
      ~VizTransect.min_gpus
      ~VizTransect.component
      ~VizTransect.config
      ~VizTransect.input_data
      ~VizTransect.logger
   
   